@@ -45,7 +45,9 @@ char *   nautilus_get_desktop_directory_uri          (void);
 char *   nautilus_get_home_directory_uri             (void);
 gboolean nautilus_is_desktop_directory_file          (GFile *dir,
 						      const char *filename);
+gboolean nautilus_is_root_directory                  (GFile *dir);
 gboolean nautilus_is_desktop_directory               (GFile *dir);
+gboolean nautilus_is_home_directory                  (GFile *dir);
 gboolean nautilus_is_home_directory_file             (GFile *dir,
 						      const char *filename);
 char *   nautilus_get_gmc_desktop_directory          (void);
